CRUD de productos y usuarios terminado(Sujeto a cambios de diseño) * En cuanto a un producto si se quiere eliminar, en la parte visual desaparece, pero en la base de datos esta solo que con un estado desactivad, para que se pueda guardar un historial del producto.