@@ -1,11 +1,21 @@
 package com.novaSup.InventoryGest.InventoryGest_Frontend.serviceJFX.util;
 
+
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.time.Duration;
 
 public class HttpClient {
+
+    private static final java.net.http.HttpClient client = java.net.http.HttpClient.newBuilder()
+            .version(java.net.http.HttpClient.Version.HTTP_2)
+            .followRedirects(java.net.http.HttpClient.Redirect.NORMAL)
+            .connectTimeout(Duration.ofSeconds(10))
+            .build();
+
 
     public static String get(String urlStr) throws Exception {
         URL url = new URL(urlStr);
@@ -66,22 +76,22 @@ public class HttpClient {
     }
 
     public static String patch(String urlStr, String jsonBody) throws Exception {
-        URL url = new URL(urlStr);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        connection.setRequestMethod("PATCH");
-        connection.setRequestProperty("Content-Type", "application/json");
-        connection.setDoOutput(true);
+        java.net.http.HttpRequest request = java.net.http.HttpRequest.newBuilder()
+                .uri(URI.create(urlStr))
+                .method("PATCH", jsonBody != null ?
+                        java.net.http.HttpRequest.BodyPublishers.ofString(jsonBody) :
+                        java.net.http.HttpRequest.BodyPublishers.noBody())
+                .header("Content-Type", "application/json")
+                .build();
 
-        if (jsonBody != null) {
-            connection.getOutputStream().write(jsonBody.getBytes());
+        java.net.http.HttpResponse<String> response =
+                client.send(request, java.net.http.HttpResponse.BodyHandlers.ofString());
+
+        if (response.statusCode() < 200 || response.statusCode() >= 300) {
+            throw new RuntimeException("Error HTTP: " + response.statusCode());
         }
 
-        int responseCode = connection.getResponseCode();
-        if (responseCode < 200 || responseCode >= 300) {
-            throw new RuntimeException("Error HTTP: " + responseCode);
-        }
-
-        return leerRespuesta(connection);
+        return response.body();
     }
 
     public static String patch(String urlStr) throws Exception {
